fix link contrast on dark mode fix resume error add google analytics fix writing underline

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,12 @@
       position:relative;
       display:inline-block;
       transition: all 0.3s ease-out;
+      &.active {
+        p {
+          color: black;
+          border-bottom: none;
+        }
+      }
       &:visited {
         color: #42444A;
       }
@@ -71,10 +77,10 @@
         color: #FBFDFF;
       }
       &.highlight {
-        color: #3873F9;
+        color: #AFC7FC;
       }
       &.nohighlight {
-        color: #3873F9;
+        color: #AFC7FC;
       }
       &:after {
         content: "";
@@ -87,7 +93,7 @@
         margin:0 auto;
         height: 1px;
         width: 0%;
-        background-color: #3873F9;
+        background-color: #AFC7FC;
         opacity: 0.5;
         transition: width 0.3s ease;
       }
@@ -99,6 +105,7 @@
     }
   }
   .app-content {
+    min-height: 95vh;
     max-width: 50vw;
     margin-left: 30vw;
     padding-top: 10vh;
